# Academic-Research-tool

./: README.md  pyproject.toml  requirements.txt
langp/: ARC2.ipynb  lcp.ipynb  lcp2.ipynb  loading.ipynb
langp/faiss_index/: index.faiss  index.pkl
